added bootstrap and applied layout to the page

--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -4,10 +4,21 @@
 
 .status {
   border_bottom: solid 1px #CCC;
-  padding: 5px 0; 
 }
 
 .status p {
   margin: 4px 0;
 
+}
+
+.status.hover {
+  background: #FAFAFA;
+}
+
+.status .admin {
+  display: none;
+}
+
+.status.hover .admin {
+  display: inline;
 }
