--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -2,8 +2,10 @@
   <h1>All of the Statuses</h1>
 </div>
 
+<%= link_to "Post a new Status", new_status_path, class: "btn btn-primary" %>
+
 <% @statuses.each do |status| %>
-<div class="status">
+<div class="status page-header">
   <strong><%= status.name %></strong>
   <p><%= status.content %></p>
   <div class="meta">
