--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Treebook</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a href='#' class="brand">Treebook</a>
-          <ul class="nav">
-            <li><%= link_to "All Statuses", statuses_path %></li>
+  <head>
+    <title>Treebook</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+      <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <a href='#' class="brand">Treebook</a>
+            <ul class="nav">
+              <li><%= link_to "All Statuses", statuses_path %></li>
+            </ul>
+            <ul class="nav pull-right">
+              <% if user_signed_in? %>
+                <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
 
+              <% else %>
+                <li><%= link_to "Register", new_user_registration_path %></li>
+                <li><%= link_to "Log in", new_user_session_path %></li>
+              <% end %>
+            </ul>  
+          </div>
         </div>
       </div>
-    </div>
 
 
-    <div class="container">
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-      <%= yield %>
-    </div>
+      <div class="container">
+         <p class="notice"><%= notice %></p>
+         <p class="alert"><%= alert %></p>
+        <%= yield %>
+      </div>
 
-</body>
+  </body>
 </html>
